logging-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPCE
  labels:
    name: NAMESPCE
