es-sts.yaml
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-NAMESPCE
  namespace: NAMESPCE
  labels:
    k8s-app: elasticsearch-NAMESPCE
    version: v7.10.2
spec:
  serviceName: elasticsearch-NAMESPCE
  replicas: 3
  selector:
    matchLabels:
      k8s-app: elasticsearch-NAMESPCE
      version: v7.10.2
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-NAMESPCE
        version: v7.10.2
    spec:
      serviceAccountName: elasticsearch-NAMESPCE
      containers:
        - image: quay.io/fluentd_elasticsearch/elasticsearch:v7.10.2
          name: elasticsearch-NAMESPCE
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
              name: db
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 5
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 5
            timeoutSeconds: 10
          volumeMounts:
            - name: elasticsearch-NAMESPCE
              mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-NAMESPCE
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: sc-aws
      resources:
        requests:
          storage: 10Gi   
      # Elasticsearch requires vm.max_map_count to be at least 262144.
      # If your OS already sets up this number to a higher value, feel free
      # to remove this init container.
