kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: "NAMESPCE"
  labels:
    k8s-app: kibana-kube-logging
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "kibana.21c-centos.exchangeweb.net"
spec:
  ports:
  - host:
    port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    k8s-app: kibana-kube-logging
