kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kibana
  namespace: "NAMESPCE"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # external-dns.alpha.kubernetes.io/hostname: "21c-centos.exchangeweb.net"
    external-dns.alpha.kubernetes.io/alias: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  defaultBackend:
    service:
      name: kibana-logging
      port:
        number: 5601
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-logging
            port:
              number: 5601
